--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcryptjs": "^2.4.3",
     "esm": "^3.0.84",
     "graphql": "^14.0.2",
-    "graphql-compose": "^5.3.3",
+    "graphql-compose": "^5.3.4",
     "graphql-compose-connection": "^4.0.0",
     "graphql-compose-mongoose": "^5.1.1",
     "graphql-compose-pagination": "^4.0.0",
@@ -25,9 +25,11 @@
     "jsonwebtoken": "^8.3.0",
     "merge-graphql-schemas": "^1.5.7",
     "mongoose": "^5.3.10",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "schemaglue": "^4.0.2"
   },
   "devDependencies": {
+    "fs-extra": "^7.0.1",
     "nodemon": "^1.18.6"
   }
 }
