--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "local",
   "version": "1.0.0",
-  "description": "",
+  "description": "a boilerplate to get started with MongoDB Apollo React and Node",
   "main": "index.js",
   "scripts": {
     "build": "node -r esm index.js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "apollo-server": "^2.2.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.0",
     "esm": "^3.0.84",
     "graphql": "^14.0.2",
     "graphql-compose": "^5.3.4",
@@ -25,11 +26,23 @@
     "jsonwebtoken": "^8.3.0",
     "merge-graphql-schemas": "^1.5.7",
     "mongoose": "^5.3.10",
+    "nprogress": "^0.2.0",
     "passport": "^0.4.0",
     "schemaglue": "^4.0.2"
   },
   "devDependencies": {
     "fs-extra": "^7.0.1",
     "nodemon": "^1.18.6"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Toreilly317/marn-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Toreilly317/marn-boilerplate/issues"
+  },
+  "homepage": "https://github.com/Toreilly317/marn-boilerplate#readme"
 }
