--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.2.0",
+    "apollo-boost": "^0.1.22",
+    "apollo-server": "^2.2.3",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "esm": "^3.0.84",
@@ -22,17 +23,16 @@
     "graphql-compose-connection": "^4.0.0",
     "graphql-compose-mongoose": "^5.1.1",
     "graphql-compose-pagination": "^4.0.0",
-    "joi": "^14.0.4",
-    "jsonwebtoken": "^8.3.0",
-    "merge-graphql-schemas": "^1.5.7",
-    "mongoose": "^5.3.10",
+    "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
+    "merge-graphql-schemas": "^1.5.8",
+    "mongoose": "^5.3.14",
     "nprogress": "^0.2.0",
-    "passport": "^0.4.0",
-    "schemaglue": "^4.0.2"
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "fs-extra": "^7.0.1",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.7"
   },
   "directories": {
     "test": "tests"
