--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "a boilerplate to get started with MongoDB Apollo React and Node",
   "main": "index.js",
   "scripts": {
-    "build": "node -r esm index.js",
-    "dev": "nodemon -r esm",
+    "dev": "nodemon -r esm server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js",
+    "heroku-postbuild": "next build",
     "debug": "node inspect --esm myscript.j",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,26 +15,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-boost": "^0.1.22",
-    "apollo-server": "^2.2.3",
+    "apollo-boost": "^0.1.23",
+    "apollo-server": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "esm": "^3.0.84",
     "graphql": "^14.0.2",
-    "graphql-compose": "^5.3.4",
+    "graphql-compose": "^5.4.0",
     "graphql-compose-connection": "^4.0.0",
-    "graphql-compose-mongoose": "^5.1.1",
+    "graphql-compose-mongoose": "^5.2.1",
     "graphql-compose-pagination": "^4.0.0",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "merge-graphql-schemas": "^1.5.8",
-    "mongoose": "^5.3.14",
+    "mongoose": "^5.4.1",
+    "next": "^7.0.2",
     "nprogress": "^0.2.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "fs-extra": "^7.0.1",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.9"
   },
   "directories": {
     "test": "tests"
