--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a boilerplate to get started with MongoDB Apollo React and Node",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r esm server.js",
+    "dev": "node -r esm server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "next build",
@@ -25,17 +25,22 @@
     "graphql-compose-connection": "^4.0.0",
     "graphql-compose-mongoose": "^5.2.1",
     "graphql-compose-pagination": "^4.0.0",
+    "isomorphic-unfetch": "^3.0.0",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "merge-graphql-schemas": "^1.5.8",
     "mongoose": "^5.4.1",
     "next": "^7.0.2",
     "nprogress": "^0.2.0",
     "passport": "^0.4.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-apollo": "^2.3.3",
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "nodemon": "^1.18.9"
   },
   "directories": {
