--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "description": "a boilerplate to get started with MongoDB Apollo React and Node",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r esm server.js",
-    "seed": "nodemon -r esm ./lib/seed-db/index.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "next build",
-    "debug": "node inspect --esm myscript.j",
+    "debug": "node inspect --esm myscript.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Taylor O'Reilly",
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.23",
     "apollo-server": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
-    "esm": "^3.0.84",
-    "graphql": "^14.0.2",
-    "graphql-compose": "^5.4.0",
+    "dotenv": "^6.2.0",
+    "esm": "^3.1.1",
+    "faker": "^4.1.0",
+    "graphql": "^14.1.1",
     "graphql-tools": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "merge-graphql-schemas": "^1.5.8",
     "mongoose": "^5.4.1",
     "next": "^7.0.2",
     "passport": "^0.4.0",
@@ -39,9 +40,6 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.10.0",
-    "faker": "^4.1.0",
-    "mongoose-dummy": "^1.0.8",
-    "mongoose-seed": "^0.5.1",
     "nodemon": "^1.18.9"
   },
   "directories": {
