--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "local",
   "version": "1.0.0",
   "description": "a boilerplate to get started with MongoDB Apollo React and Node",
-  "main": "index.js",
+  "main": "./server/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon -r dotenv/config ./server/server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "next build",
-    "debug": "node inspect --esm myscript.js",
+    "debug": "node inspect -r esm ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,30 +16,34 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.23",
+    "apollo-link": "^1.2.8",
+    "apollo-link-context": "^1.0.14",
     "apollo-server": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
+    "connect-mongo": "^2.0.3",
     "dotenv": "^6.2.0",
-    "esm": "^3.1.1",
-    "faker": "^4.1.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
-    "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "merge-graphql-schemas": "^1.5.8",
     "mongoose": "^5.4.1",
-    "next": "^7.0.2",
-    "passport": "^0.4.0",
-    "react": "^16.7.0",
-    "react-apollo": "^2.3.3",
-    "react-dom": "^16.7.0",
-    "styled-components": "^4.1.3"
+    "next": "^8.0.0",
+    "nodemailer": "^5.1.1",
+    "react": "^16.8.1",
+    "react-apollo": "^2.4.1",
+    "react-dom": "^16.8.1",
+    "reactstrap": "^7.1.0",
+    "styled-components": "^4.1.3",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "faker": "^4.1.0",
     "nodemon": "^1.18.9"
   },
   "directories": {
