--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "apollo-link": "^1.2.8",
     "apollo-link-context": "^1.0.14",
     "apollo-server": "^2.3.1",
+    "apollo-server-express": "^2.4.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
-    "connect-mongo": "^2.0.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "express-session": "^1.15.6",
     "graphql": "^14.1.1",
     "graphql-tools": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
@@ -33,6 +32,8 @@
     "mongoose": "^5.4.1",
     "next": "^8.0.0",
     "nodemailer": "^5.1.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "react": "^16.8.1",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.8.1",
@@ -43,6 +44,11 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "faker": "^4.1.0",
     "nodemon": "^1.18.9"
   },
