--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.1.23",
+    "apollo-cache-inmemory": "^1.4.3",
+    "apollo-client": "^2.4.13",
     "apollo-link": "^1.2.8",
     "apollo-link-context": "^1.0.14",
+    "apollo-link-error": "^1.1.7",
+    "apollo-link-http": "^1.5.11",
     "apollo-server": "^2.3.1",
     "apollo-server-express": "^2.4.0",
     "bcryptjs": "^2.4.3",
