--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,15 +12,22 @@
     },
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "react/prop-types": 0,
-    "react/jsx-uses-vars": [
-      2
-    ],
+    "react/jsx-uses-vars": [2],
     "semi": "off",
-    "no-console": 0
+    "no-console": 0,
+    "arrow-parens": 0,
+    "no-debugger": 2,
+    "one-var": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "linebreak-style": ["error", "windows"],
+    "brace-style": [2, "stroustrup", { "allowSingleLine": true }]
   }
 }
