--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "apollo-server-express": "^2.4.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
+    "cookie": "^0.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.4.0",
@@ -40,6 +42,7 @@
     "passport-jwt": "^4.0.0",
     "react": "^16.8.1",
     "react-apollo": "^2.4.1",
+    "react-apollo-hooks": "^0.4.3",
     "react-dom": "^16.8.1",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.1.3",
