--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "Taylor O'Reilly",
   "license": "ISC",
   "dependencies": {
-    "apollo-boost": "^0.1.23",
+    "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.4.3",
     "apollo-client": "^2.4.13",
     "apollo-link": "^1.2.8",
@@ -28,6 +29,7 @@
     "concurrently": "^4.1.0",
     "cookie": "^0.3.1",
     "dotenv": "^6.2.0",
+    "draft-js": "^0.10.5",
     "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
@@ -49,6 +51,7 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.13.0",
