--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "nodemon -r dotenv/config ./server/server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "heroku-postbuild": "next build",
-    "debug": "node inspect -r esm ./server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "next build"
   },
   "keywords": [],
   "author": "Taylor O'Reilly",
@@ -17,50 +15,50 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
-    "apollo-cache-inmemory": "^1.4.3",
-    "apollo-client": "^2.4.13",
-    "apollo-link": "^1.2.8",
-    "apollo-link-context": "^1.0.14",
-    "apollo-link-error": "^1.1.7",
-    "apollo-link-http": "^1.5.11",
-    "apollo-server": "^2.3.1",
-    "apollo-server-express": "^2.4.0",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "apollo-server": "^2.4.8",
+    "apollo-server-express": "^2.4.8",
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
     "cookie": "^0.3.1",
-    "dotenv": "^6.2.0",
+    "dotenv": "^7.0.0",
     "draft-js": "^0.10.5",
     "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.3",
+    "graphql-tools": "^4.0.4",
     "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.1",
-    "next": "^8.0.0",
+    "mongoose": "^5.4.19",
+    "next": "^8.0.3",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "react": "^16.8.1",
-    "react-apollo": "^2.4.1",
+    "react": "^16.8.4",
+    "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.4",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.1.3",
     "validator": "^10.11.0"
   },
   "devDependencies": {
     "babel-plugin-module-alias": "^1.6.0",
-    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.15.2",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "faker": "^4.1.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.10"
   },
   "directories": {
     "test": "tests"
