--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^7.0.0",
     "draft-js": "^0.10.5",
     "express": "^4.16.4",
+    "final-form": "^4.12.0",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.19",
+    "mongoose-paginate": "^5.0.3",
     "next": "^8.0.3",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
@@ -44,6 +46,8 @@
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
     "react-dom": "^16.8.4",
+    "react-dropzone": "^10.0.4",
+    "react-final-form-hooks": "^1.0.1",
     "reactstrap": "^7.1.0",
     "styled-components": "^4.1.3",
     "validator": "^10.11.0"
