--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "Taylor O'Reilly",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
@@ -30,33 +29,34 @@
     "draft-js": "^0.10.5",
     "express": "^4.16.4",
     "final-form": "^4.12.0",
-    "graphql": "^14.1.1",
+    "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.4.20",
     "mongoose-paginate": "^5.0.3",
     "next": "^8.0.3",
-    "nodemailer": "^5.1.1",
+    "next-routes": "^1.4.2",
+    "nodemailer": "^6.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "react": "^16.8.4",
-    "react-apollo": "^2.5.2",
-    "react-apollo-hooks": "^0.4.3",
-    "react-dom": "^16.8.4",
-    "react-dropzone": "^10.0.4",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.3",
+    "react-apollo-hooks": "^0.4.4",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.0",
     "react-final-form-hooks": "^1.0.1",
     "reactstrap": "^7.1.0",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.2.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^5.15.2",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
